--- a/Fundamentos/bloco5/dia1/index.html
+++ b/Fundamentos/bloco5/dia1/index.html
@@ -54,6 +54,21 @@
         5. Crie e execute uma função que modifique todo o texto da tag <p> para maiúsculo.
         6. Crie e execute uma função que exiba o conteúdo de todas as tags <p> no console.
         */
+
+        function alteraTagP(){
+            document.getElementsByTagName('p')[1].innerText = 'Vou estar ganhando 9k por mes e morando sozinho!'
+        }
+        alteraTagP()
+
+        function changeColorRed(){document.getElementsByClassName('main-content')[0].style.backgroundColor = 'green'
+    }
+    changeColorRed()
+
+        function mudaCorVermelhoParaBranco(){
+
+            document.getElementsByClassName('center-content ')[0]
+        }
+        
     </script>
   </body>
 </html>
